comment out the schedule section in locust-test.yml

--- a/.github/workflows/locust-test.yml
+++ b/.github/workflows/locust-test.yml
@@ -5,8 +5,8 @@ on:
         branches:
             - main
     workflow_dispatch:
-    schedule:
-        - cron: "0 2 * * *" #everyday at 2 am
+    # schedule:
+    #     - cron: "0 2 * * *" #everyday at 2 am
 
 jobs:
     stress-test:
